[package]
name = "cargo-mpirun"
version = "0.1.7"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
description = """
    `cargo mpirun` allows you to easily build and run your MPI applications in
    a single command. It emulates `cargo run`, allowing you to specify a \
    target to be built and run, and cargo takes care of the rest."""
readme = "README.md"
license = "MIT"
repository = "https://github.com/AndrewGaspar/cargo-mpirun"
categories = ["development-tools"]
keywords = ["message-passing", "parallel", "MPI", "cargo-subcommand"]

[dependencies]
cargo_metadata = "0.6.2"
clap = { version = "~2.32.0", features=["yaml"] }

[badges]
travis-ci = { repository = "AndrewGaspar/cargo-mpirun", branch = "master" }