[package]
name = "cargo-mpirun"
version = "0.2.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>",
"Jed Brown <jed@jedbrown.org>",]
description = """\
`cargo mpirun` builds and runs your MPI applications in a single command, similar to `cargo run`.\
"""
readme = "README.md"
license = "MIT"
repository = "https://github.com/AndrewGaspar/cargo-mpirun"
categories = ["development-tools"]
keywords = ["message-passing", "parallel", "MPI", "cargo-subcommand"]
edition = "2021"

[dependencies]
cargo_metadata = "0.15.2"
clap = { version = "4.0.27", features = ["cargo", "derive"] }
thiserror = "1.0.37"

[badges]
travis-ci = { repository = "AndrewGaspar/cargo-mpirun", branch = "master" }
